tests/snapshots/migrated_v1_trace__rm_file_build_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

  parser: gnu │

                                            command │ rm foo
                                              facts │ :opencode/agent "build"
  24: (rule (command "rm")                          │
        (context (and (or (flag "r")                │
                          (flag                     │
                           "recursive"))            │
                      …))                           │
        (deny                                       │ → :deny "Recursive deletion from root"
         "Recursive deletion from root"))           │
                                                    │
  29: (rule (command "rm")                          │
        (args                                       │
         (when (and                                 │
                (build-mode                         │ build-mode → yes
                 (or                                │
                  (has                              │ no
                   [:claude-code/permission-mode    │
                    "acceptEdits"])                 │
                  (has [:opencode/agent             │ "build" → yes
                        "build"])))                 │
                (or (flag "r")                      │
                    (flag "recursive")))            │
           <if-effect>)))                           │
                                                    │
  37: (rule (command "rm")                          │
        (context                                    │
         (build-mode                                │ build-mode → yes
          (or                                       │
           (has                                     │ no
            [:claude-code/permission-mode           │
             "acceptEdits"])                        │
           (has                                     │ "build" → yes
            [:opencode/agent "build"]))))           │
        (effect                                     │ → :allow "Non-recursive delete is allowed"
         :allow "Non-recursive delete is allowed")) │

Result

  rm foo

  → :allow "Non-recursive delete is allowed"

  config: <config-path>
