tests/snapshots/migrated_v1_trace__rm_file_no_context_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                         command │ rm foo
                                          parser │ gnu  flags permute
  24: (rule (command "rm")                       │
        (context (and (or (flag "r")             │
                          (flag                  │
                           "recursive"))         │
                      …))                        │
        (deny                                    │ → :deny "Recursive deletion from root"
         "Recursive deletion from root"))        │
                                                 │
  29: (rule (command "rm")                       │
        (args                                    │
         (when (and                              │
                (build-mode                      │ build-mode → no
                 (or                             │
                  (has                           │ no
                   [:claude-code/permission-mode │
                    "acceptEdits"])              │
                  (has [:opencode/agent          │ no
                        "build"])))              │
                …)                               │
           <if-effect>)))                        │
                                                 │
  37: (rule (command "rm")                       │
        (context                                 │
         (build-mode                             │ build-mode → no
          (or                                    │
           (has                                  │ no
            [:claude-code/permission-mode        │
             "acceptEdits"])                     │
           (has                                  │ no
            [:opencode/agent "build"]))))        │
        (allow                                   │ → :allow "Non-recursive delete is allowed"
         "Non-recursive delete is allowed"))     │
                                No matching rule │ → :ask (default)

Result

  rm foo

  → :ask "Rules for `rm` exist but context or arguments did not match any patterns"

  config: <config-path>
