tests/snapshots/migrated_v1_trace__rm_recursive_build_tmp_stripped.snap
---
source: tests/migrated_v1_trace.rs
assertion_line: 110
expression: normalised
---

Trace

  parser: gnu │

                                                command │ rm -r /tmp/foo
                                                  facts │ :opencode/agent "build"
  24: (rule (command "rm")                              │
        (context (and (or (flag "r")                    │
                          …)                            │
                      (anywhere "/")))                  │
        (deny                                           │ → :deny "Recursive deletion from root"
         "Recursive deletion from root"))               │
                                                        │
  29: (rule (command "rm")                              │
        (args                                           │
         (when (and                                     │
                (build-mode                             │ build-mode → yes
                 (or                                    │
                  (has                                  │ no
                   [:claude-code/permission-mode        │
                    "acceptEdits"])                     │
                  (has [:opencode/agent                 │ "build" → yes
                        "build"])))                     │
                (or (flag "r")                          │
                    …))                                 │
           (if (anywhere (regex                         │
                          "^/tmp/.*"))                  │
               (effect                                  │ → :allow "Deleting tmp files is allowed"
                :allow "Deleting tmp files is allowed") │
             …))))                                      │
                                                        │
  37: (rule (command "rm")                              │
        (context                                        │
         (build-mode                                    │ build-mode → yes
          (or                                           │
           (has                                         │ no
            [:claude-code/permission-mode               │
             "acceptEdits"])                            │
           (has                                         │ "build" → yes
            [:opencode/agent "build"]))))               │
        (effect                                         │ → :allow "Non-recursive delete is allowed"
         :allow "Non-recursive delete is allowed"))     │

Result

  rm -r /tmp/foo

  → :allow "Deleting tmp files is allowed"

  config: <config-path>
