tests/snapshots/migrated_v1_trace__rm_rf_root_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

  [2mparser:[0m gnu [2m│[0m

                                        [2mcommand[0m [2m│[0m [1mrm -rf /[0m
  [2m24: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"rm"[0m[2m)[0m                      [2m│[0m
        [2m([0mcontext [2m([0mand [2m([0mor [2m([0mflag [32m"r"[0m[2m)[0m            [2m│[0m
                          [2m…[0m[2m)[0m                    [2m│[0m
                      [2m([0m[34manywhere[0m [32m"/"[0m[2m)[0m[2m)[0m[2m)[0m          [2m│[0m
        [2m([0m[34meffect[0m                                 [2m│[0m [2m[0m[2m→[0m [1;31m:deny[0m [32m"Recursive deletion from root"[0m
         [94m:deny[0m [32m"Recursive deletion from root"[0m[2m)[0m[2m)[0m [2m│[0m

[1mResult[0m

  [4;31mrm -rf /[0m

  [2m→[0m [1;31m:deny[0m [32m"Recursive deletion from root"[0m

  config: <config-path>
