tests/snapshots/migrated_v1_trace__rm_rf_root_stripped.snap
---
source: tests/migrated_v1_trace.rs
assertion_line: 110
expression: normalised
---

Trace

                                         command │ rm -rf /
                                          parser │ gnu
  24: (rule (command "rm")                       │
        (context (and (or (flag "r")             │
                          …)                     │
                      (anywhere "/")))           │
        (deny                                    │ → :deny "Recursive deletion from root"
         "Recursive deletion from root"))        │
                                                 │
  29: (rule (command "rm")                       │
        (args                                    │
         (when (and                              │
                (build-mode                      │ build-mode → no
                 (or                             │
                  (has                           │ no
                   [:claude-code/permission-mode │
                    "acceptEdits"])              │
                  (has [:opencode/agent          │ no
                        "build"])))              │
                …)                               │
           <if-effect>)))                        │
                                                 │
  37: (rule (command "rm")                       │
        (context                                 │
         (build-mode                             │ build-mode → no
          (or                                    │
           (has                                  │ no
            [:claude-code/permission-mode        │
             "acceptEdits"])                     │
           (has                                  │ no
            [:opencode/agent "build"]))))        │
        (allow                                   │ → :allow "Non-recursive delete is allowed"
         "Non-recursive delete is allowed"))     │

Result

  rm -rf /

  → :deny "Recursive deletion from root"

  config: <config-path>
