tests/snapshots/migrated_v1_trace__ssh_rm_rf_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

                                  [2mcommand[0m [2m│[0m [1mssh prod "rm -rf /"[0m
                                   [2mparser[0m [2m│[0m gnu  flags posix  parameters (-D -E -F -I -J -L -O -Q -R -S -W -b -c -e -i -l -m -o -p -w)  rest #cmd
  [2m107: [0m[2m([0m[34mrule[0m [32m"ssh"[0m                        [2m│[0m
         [2m([0m[34mwhen[0m [2m([0m[34mpositional[0m [2m[[0m[94m:ssh/host[0m *[2m][0m[2m)[0m [2m│[0m
           [2m<arg-pattern>[0m[2m)[0m[2m)[0m                [2m│[0m
                         [3;33mNo matching rule[0m [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m (default)

[1mResult[0m

  [4;33mssh prod "rm -rf /"[0m

  [2m→[0m [1;33m:ask[0m [32m"Rules for `ssh` exist but context or arguments did not match any patterns"[0m

  config: <config-path>
