tests/snapshots/migrated_v1_trace__ssh_rm_rf_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ ssh prod "rm -rf /"
                                   parser │ gnu  flags posix  rest #cmd
  107: (rule "ssh"                        │
         (when (positional [:ssh/host *]) │
           <arg-pattern>))                │
                         No matching rule │ → :ask (default)

Result

  ssh prod "rm -rf /"

  → :ask "Rules for `ssh` exist but context or arguments did not match any patterns"

  config: <config-path>
